# swift-webdriver

./: .gitignore  .swiftformat  .swiftlint.yml  CMakeLists.txt  CONTRIBUTING.md  Package.resolved  Package.swift  Readme.md
.github/actions/windows-run-and-flush/: action.yml
.github/actions/windows-swift-teardown/: action.yml
.github/workflows/: build-and-test.yml
Docs/: IssueTemplate.md  SupportedAPIs.md  Usage.md
Sources/: Capabilities.swift  CommandLine.swift  Element+Request.swift  Element.swift  ElementRequests.swift  ErrorResponse.swift  HTTPWebDriver.swift  KeyCode.swift  KeyCodes.swift  Keys.swift  MouseButton.swift  NewSessionRequest.swift  Print.swift  ProcessWrapper.swift  Request.swift  Requests.swift  Retry.swift  Session+Requests.swift  Session.swift  SessionRequests.swift  URLRequestExtensions.swift  Utils.swift  WebDriver+Requests.swift  WebDriver.swift  WebDriverError.swift  WebDriverRequest.swift  WebDriverRequests.swift  WebDriverStatus.swift  WinAppDriver+ExtensionCapabilities.swift  WinAppDriver+Requests.swift  WinAppDriver+WebDriverError.swift  WinAppDriver.swift  WinAppDriverProcess.swift  WindowsUtilities.swift  WireProtocol.swift
Sources/ChromiumDriver/: ChromiumCapabilities.swift  ChromiumDriver+Capabilities.swift~HEAD  ChromiumDriver+Capabilities.swift~chromium_support_0  ChromiumDriver.swift  ChromiumProcess.swift  ChromiumSession.swift
Sources/WebDriver/: CMakeLists.txt  Capabilities+AppiumOptions.swift  Capabilities.swift  Element.swift  ElementLocator.swift  ElementNotFoundError.swift  ErrorResponse.swift  HTTPWebDriver.swift  Keys.swift  Location.swift  MouseButton.swift  NoSuchElementError.swift  Poll.swift  Requests.swift  ScreenOrientation.swift  Session.swift  TimeoutType.swift  TouchClickKind.swift  URLRequestExtensions.swift  WebDriver.swift  Window.swift  WireProtocol.swift
Sources/WinAppDriver/: CMakeLists.txt  CommandLine.swift  ElementLocator+accessibilityId.swift  ErrorResponse+WinAppDriver.swift  ReexportWebDriver.swift  Win32Error.swift  Win32ProcessTree.swift  WinAppDriver+Attributes.swift  WinAppDriver+Capabilities.swift  WinAppDriver+ExtensionCapabilities.swift  WinAppDriver+Process.swift  WinAppDriver.swift  WindowsSystemPaths.swift
Tests/: CMakeLists.txt
Tests/AppiumTests/: AppiumTests.swift
Tests/Common/: PNGUtilities.swift  XCUIApplication.swift
Tests/UnitTests/: APITests.swift  APIToRequestMappingTests.swift  CommandLineTests.swift  MockWebDriver.swift  UtilTests.swift
Tests/WebDriverTests/: ArcTests.swift  CalculatorTests.swift  ChromiumDriverTests.swift  NotepadTests.swift  SessionTests.swift  StaticSessionTests.swift  StatusTests.swift  TimeoutTests.swift
Tests/WinAppDriverTests/: AppDriverOptionsTest.swift  MSInfo32App.swift  RequestsTests.swift  System32.swift  TimeoutTests.swift
scripts/: screenshot.ps1
