add_library(WebDriver
  Capabilities.swift
  Element.swift
  ElementLocator.swift
  ErrorResponse.swift
  HTTPWebDriver.swift
  Keys.swift
  Location.swift
  MouseButton.swift
  NoSuchElementError.swift
  Poll.swift
  Request.swift
  Requests.swift
  ScreenOrientation.swift
  Session.swift
  TimeoutType.swift
  TouchClickKind.swift
  URLRequestExtensions.swift
  WebDriver.swift
  WebDriverStatus.swift
  Window.swift)
